Add a tree swap action.